# image-to-code

./: .railwayignore  AUTO_DEPLOY_FIX.md  CHECKLIST.md  ELEMENT_EXTRACTION_IMPLEMENTATION.md  GITHUB_AUTO_DEPLOY.md  MODELS_UPDATE.md  PORT_FIX_EXPLANATION.md  QUICK_RAILWAY_START.md  RAILWAY_DEPLOY.md  RAILWAY_ENV_VARIABLES.md  RAILWAY_FIX.md  RAILWAY_GITHUB_SETUP.md  RAILWAY_SETUP.md  RAILWAY_STATUS.md  STATUS.md  check_setup.sh  railway.json  railway.toml  БЫСТРЫЙ_СТАРТ.md  ИНСТРУКЦИЯ_ПО_РАЗВЕРТЫВАНИЮ.md
backend/: Dockerfile  llm.py  main.py  pyproject.toml  railway.toml
backend/config/: __init__.py  settings.py
backend/image_analysis/: __init__.py  asset_extraction.py  element_extraction.py  svg_extraction.py
backend/image_generation/: core.py
backend/models/: claude.py  gemini.py  openai_client.py  registry.py
backend/pipeline/: __init__.py  core.py  generate_code.py  types.py  ws.py
backend/pipeline/codegen/: __init__.py  context.py  middlewares.py
backend/pipeline/codegen/stages/: __init__.py  image_analysis.py  mock_response.py  model_selection.py  parallel_generation.py  parameter_extraction.py  post_processing.py  prompt_creation.py  video_generation.py
backend/prompts/: __init__.py  common.py  element_based_prompts.py  imported_code_prompts.py  registry.py  screenshot_system_prompts.py
backend/routes/: evals.py  generate_code.py  models.py
backend/tests/: test_asset_injection.py  test_model_registry.py  test_model_selection.py  test_prompt_registry.py
backend/video/: utils.py
backend/ws/: payload.py
frontend/: Dockerfile.prod  nginx.conf  (+2 more)
(+19 files in other folders)
